--- a/index.html
+++ b/index.html
@@ -3,22 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Página administrativa</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 </head>
 <body>
 <h2>Panel administrativo</h2>
+<a href="./platillos.html">Platillos</a>
 <div>
     <input type="file" name="imagen" onchange="viewImg()"><br><br><br>
     <img src="" alt="Imagen de platillo" height="300" id="imgPlatillo">
 </div>
 <div>
     <form onsubmit="addPlatillo()">
-        Nombre: <input type="text" name="name" id="name" ><br><br>
-        Descripción: <input type="text" name="description" id="description"><br><br>
-        Precio: <input type="number" name="price" id="price"><br><br>
+        Nombre: <input type="text" name="name" id="name" required><br><br>
+        Descripción: <input type="text" name="description" id="description" required><br><br>
+        Precio: <input type="number" name="price" id="price" required><br><br>
+        Dirección Imágen: <input type="text" name="imgDir" id="imgDir" required><br><br>
         <input type="submit" value="Subir">
     </form>
 </div>
 </body>
 <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
 <script type="text/javascript" src="index.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap.native/1.0.5/bootstrap-native.min.js"></script>
 </html>
