--- a/platillos.html
+++ b/platillos.html
@@ -3,15 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 </head>
 <body>
-<h2>Panel administrativo - Platillos</h2>
-<a href="./index.html">Inicio</a>
-<button onclick="getPlatillos()">Imprimir platillos</button>
-<ul id="lista">
-
-</ul>
+<div class="container">
+    <div class="jumbotron">
+        <h2>Panel administrativo - Platillos</h2>
+    </div>
+    <ul class="nav nav-pills">
+        <li role="presentation" class="active">
+            <a href="./index.html">Inicio</a>
+        </li>
+    </ul>
+    <br><br>
+    <button class="btn btn-success" onclick="getPlatillos()">Imprimir platillos</button>
+    <br>
+    <ul class="list-group" id="lista"></ul>
+</div>
 </body>
 <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
 <script type="text/javascript" src="index.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap.native/1.0.5/bootstrap-native.min.js"></script>
 </html>
