- Integrate firebase hosting to deploy - Add module bebidas (get, post, delete)
Signed-off-by: David Sánchez <david95sb@hotmail.com>

--- a/public/platillos.html
+++ b/public/platillos.html
@@ -12,13 +12,15 @@
 <body>
 <div class="container">
     <div class="jumbotron">
-        <h2>Panel administrativo - Platillos</h2>
+        <h2>Platillos</h2>
     </div>
     <ul class="nav nav-pills">
         <li role="presentation" class="active">
-            <a href="./index.html">Inicio</a>
+            <a href="addPlatillo.html">Agregar platillo</a>
         </li>
     </ul>
+    <br><br>
+    <button class="btn btn-danger" onclick="signOut()" >Salir</button>
     <br><br>
     <button class="btn btn-success" onclick="getPlatillos()">Imprimir platillos</button>
     <br>
