--- a/public/bebidas.html
+++ b/public/bebidas.html
@@ -2,8 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Página administrativa</title>
-
+    <title>Title</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -13,27 +12,19 @@
 <body>
 <div class="container">
     <div class="jumbotron">
-        <h2>Panel administrativo</h2>
+        <h2>Bebidas</h2>
     </div>
     <ul class="nav nav-pills">
         <li role="presentation" class="active">
-            <a href="./platillos.html">Platillos</a>
+            <a href="addBebida.html">Agregar bebida</a>
         </li>
     </ul>
     <br><br>
-    <div>
-        <input type="file" name="imagen" onchange="viewImg()"><br><br><br>
-        <img src="" alt="Imagen de platillo" height="300" id="imgPlatillo">
-    </div>
-    <div>
-        <form onsubmit="addPlatillo()">
-            Nombre: <input class="form-control" type="text" name="name" id="name" required><br><br>
-            Descripción: <input class="form-control" type="text" name="description" id="description" required><br><br>
-            Precio: <input class="form-control" type="number" name="price" id="price" required><br><br>
-            Dirección Imágen: <input class="form-control" type="text" name="imgDir" id="imgDir" required><br><br>
-            <input class="btn btn-success" type="submit" value="Subir">
-        </form>
-    </div>
+    <button class="btn btn-danger" onclick="signOut()" >Salir</button>
+    <br><br>
+    <button class="btn btn-success" onclick="getBebidas()">Imprimir bebidas</button>
+    <br>
+    <ul class="list-group" id="lista"></ul>
 </div>
 </body>
 <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
